Fix AddSubscription layout on mobile

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,3 +1,4 @@
 .Header {
+  height: 92px;
   padding: 1rem;
 }
